# PyTokenCalc

./: .gitignore  ADDING_PROVIDERS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CLOUD_INTEGRATION_QUICK_START.md  COMMANDS_REFERENCE.md  COMPLETE_PRODUCT_VISION.md  Cargo.toml  INTEGRATION_COMPARISON.md  MULTI_CHANNEL_CLAUDE_COSTS.md  OPENTELEMETRY_INTEGRATION.md  PyPI_SEO_ACTION_LIST.md  PyPI_SEO_OPTIMIZATION.md  QUICK_START_CLI.md  README.md  RELEASE_NOTES_v0.7.0.md  ROADMAP.md  ROADMAP_HONEST.md  SECURITY_AUDIT.md  SUBMISSION_AUTOMATION.md  USAGE.md  USER_ENGAGEMENT_GUIDE.md  claude_cost_report.py  claude_skill_definition.json  demo_claude_code.py  playwright_skill_submissions.js  pycostaudit_monitor.py  pyproject.toml  pytokencalc_skill.py  requirements-lock.txt  setup-complete-monitoring.sh  skills_manifest.json  submit_awesome_lists.sh
.github/workflows/: ci.yml
browser-extension/: manifest.json
crates/cost-reporter/: Cargo.toml
crates/cost-reporter/src/: analyzer.rs  audit.rs  cost_tracker.rs  file_format_profiler.rs  lib.rs  mcp.rs  mcp_profiler.rs  memory.rs  observability.rs  operation_profiler.rs  pricing_service.rs  provider_integrations.rs  session.rs  storage.rs  types.rs
examples/: demo_claude_code_tracking.py
pycostaudit/: __init__.py  cli_interactive.py  compliance_audit.py  cost_calculator.py
pycostaudit/dashboard/: app.py
python/: Cargo.toml
python/src/: lib.rs
python/src/pycost_reporter/: __init__.py
python/src/pycostaudit/: __init__.py
python/src/pycostreporter/: __init__.py
pytokencalc/: __init__.py  _budget_enforcement.py  cli.py  config.py  cost_calculator.py  cost_model.py  cost_models.py  database.py  error_messages.py  exceptions.py  model_discovery.py  persistence.py  pricing_manager.py  server.py  statguardian_integration.py
pytokencalc/tokenizers/: __init__.py  base.py  cache.py  huggingface_counter.py  openai_counter.py  registry.py
quality_contracts/: cost_prediction.yaml  model_efficiency.yaml  provider_reliability.yaml  token_accuracy.yaml
tests/: test_accuracy_verification.py  test_compliance_audit.py  test_cost_model.py  test_cost_models_v6.py  test_database_schema.py  test_integration.py  test_model_discovery.py  test_statguardian_integration.py
