[workspace]
members = ["python"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
license = "MIT"
repository = "https://github.com/Mullassery/PyTokenCalc"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
once_cell = "1.19"
