[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin.build"

[project]
name = "pytokencalc"
version = "0.7.0"
description = "Multi-provider LLM token counter & cost calculator. Unified token counting and cost calculation across 20+ cloud providers and 10+ open-source APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = [
    "llm",
    "token-counting",
    "cost-calculation",
    "multi-provider",
    "gpt",
    "claude",
    "gemini",
    "llama",
    "mistral",
    "groq",
    "deepinfra",
    "token-counter",
    "tokenizer",
    "ai-cost-management",
    "openanchor"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "sqlalchemy==2.0.23",
    "pydantic==2.4.2",
    "pydantic[email]==2.4.2",
    "pandas==2.1.0",
    "reportlab==4.0.7",
    "openpyxl==3.11.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

# Optional tokenizer support (installed separately for smaller footprint)
# Phase 1: Local tokenizers
optional-tokenizers = [
    "tiktoken>=0.5.0",  # OpenAI GPT token counting
    "transformers>=4.30.0",  # Llama, Mistral, 1000+ models
    "sentencepiece>=0.1.99",  # SentencePiece dependency for HF models
]

# Phase 2+: API-based tokenizers (not yet implemented)
# optional-api-tokenizers = [
#     "anthropic>=0.20.0",  # Anthropic Claude API
#     "google-generativeai>=0.3.0",  # Google Gemini API
# ]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "mypy==1.7.0",
    "black==23.12.0",
    "ruff==0.1.8",
]

postgres = [
    "psycopg2-binary==2.9.9",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyTokenCalc"
Repository = "https://github.com/Mullassery/PyTokenCalc"
"Bug Tracker" = "https://github.com/Mullassery/PyTokenCalc/issues"
Documentation = "https://github.com/Mullassery/PyTokenCalc#readme"
Changelog = "https://github.com/Mullassery/PyTokenCalc/releases"
"Source Code" = "https://github.com/Mullassery/PyTokenCalc/tree/main"
Discussions = "https://github.com/Mullassery/PyTokenCalc/discussions"

[tool.maturin]
module-name = "pytokencalc._core"
manifest-path = "Cargo.toml"
python-source = "."

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
