[package]
name = "pycostaudit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { workspace = true }
cost-reporter = { path = "../crates/cost-reporter" }

[lib]
name = "_core"
crate-type = ["cdylib"]
